<resources>
    <string name="app_name">MemoCards</string>
    <string name="play">Play!</string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="difficult">Difficult</string>
    <string name="Back">back</string>
    <string name="Home">home</string>
    <string name="back">BACK</string>
</resources>
